# ChangeLog for net-irc/irssi
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/irssi/ChangeLog,v 1.83 2006/03/25 19:20:41 swegener Exp $

  25 Mar 2006; Sven Wegener <swegener@gentoo.org> irssi-0.8.10-r2.ebuild:
  Drop myconf from econf, we don't need it anymore.

  18 Mar 2006; Sven Wegener <swegener@gentoo.org> irssi-0.8.9-r1.ebuild,
  irssi-0.8.10.ebuild, irssi-0.8.10-r2.ebuild:
  Remove the old irssi-cvs blocker.

*irssi-0.8.10-r2 (18 Mar 2006)

  18 Mar 2006; Sven Wegener <swegener@gentoo.org> -irssi-0.8.10-r1.ebuild,
  +irssi-0.8.10-r2.ebuild:
  Another revision bump to partly revert the last commit. Using ncurses for
  all things causes too much trouble.

*irssi-0.8.10-r1 (17 Mar 2006)

  17 Mar 2006; Sven Wegener <swegener@gentoo.org> +irssi-0.8.10-r1.ebuild:
  Revision bump. Some general ebuild cleanup, depend on newer dante to remove
  our socks patch and disable using terminfo directly, which should fix some
  color weirdness.

  26 Feb 2006; Joshua Kinard <kumba@gentoo.org> irssi-0.8.10.ebuild:
  Marked stable on mips.

  21 Feb 2006; Luis Medinas <metalgod@gentoo.org> irssi-0.8.10.ebuild:
  Stable on amd64.

  21 Feb 2006; Lars Weiler <pylon@gentoo.org> irssi-0.8.10.ebuild:
  Stable on ppc.

  21 Feb 2006; Jeroen Roovers <jer@gentoo.org> irssi-0.8.10.ebuild:
  Stable on hppa.

  20 Feb 2006; Markus Rothe <corsair@gentoo.org> irssi-0.8.10.ebuild:
  Stable on ppc64

  20 Feb 2006; Gustavo Zacarias <gustavoz@gentoo.org> irssi-0.8.10.ebuild:
  Stable on sparc

  19 Feb 2006; Sven Wegener <swegener@gentoo.org> metadata.xml,
  irssi-0.8.10.ebuild:
  Marked stable on x86.

*irssi-0.8.10 (11 Dec 2005)

  11 Dec 2005; Sven Wegener <swegener@gentoo.org> -irssi-0.8.10_rc6.ebuild,
  -irssi-0.8.10_rc7.ebuild, +irssi-0.8.10.ebuild:
  Version bump.

  28 Nov 2005; <mcumming@gentoo.org> irssi-0.8.10_rc6.ebuild,
  irssi-0.8.10_rc7.ebuild, irssi-0.8.9-r1.ebuild: