@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/konversation
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/konversation/ChangeLog,v 1.34 2006/04/02 01:12:19 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/konversation/ChangeLog,v 1.35 2006/04/07 12:00:33 flameeyes Exp $
+
+  07 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
+  konversation-0.19-r1.ebuild:
+  Add ~x86-fbsd keyword.
 
   02 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
   -konversation-0.15.1.ebuild, -konversation-0.17.ebuild:
